# mini_daburu_OpenSource

./: .gitignore  LICENSE
.test_data/: site_profiles.json
data/: trace.jsonl
data_loop_test/: episodes.jsonl  reflections.jsonl
data_test/: episodes.jsonl  reflections.jsonl
mini_daburu_os/: .gitignore  README.md  pyproject.toml  verify_logging.py
mini_daburu_os/agent_os/: __init__.py  cli.py  logger.py  loop.py  planner.py  schemas.py  verifier.py
mini_daburu_os/agent_os/evolution/: evaluator.py  versioning.py
mini_daburu_os/agent_os/experiment/: sandbox.py
mini_daburu_os/agent_os/improvement/: proposer.py
mini_daburu_os/agent_os/learning/: reflection.py
mini_daburu_os/agent_os/memory/: __init__.py  jsonl_memory.py  structured.py
mini_daburu_os/agent_os/skills/: __init__.py  account_creation.py  base.py  deploy_app.py  monitor_site.py
mini_daburu_os/agent_os/tools/: __init__.py  api.py  base.py  browser.py  deploy.py  email_tool.py  files.py  human.py  monitor.py  registry.py  shell.py  vault.py
mini_daburu_os/docs/: ARCHITECTURE.md
mini_daburu_os/examples/: goals.txt
mini_daburu_os/tests/: test_minimal_os.py
